--- a/Lab2/Lab2_proj/ClientPart/mainwindow.ui
+++ b/Lab2/Lab2_proj/ClientPart/mainwindow.ui
@@ -510,6 +510,9 @@ QLineEdit:focus{
                 <property name="text">
                  <string/>
                 </property>
+                <property name="frame">
+                 <bool>true</bool>
+                </property>
                 <property name="dragEnabled">
                  <bool>false</bool>
                 </property>
