--- a/Lab2/Lab2_proj/ClientPart/purchasesmenu.ui
+++ b/Lab2/Lab2_proj/ClientPart/purchasesmenu.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>538</width>
-    <height>349</height>
+    <width>1292</width>
+    <height>620</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -170,10 +170,7 @@
     </layout>
    </item>
    <item row="0" column="1">
-    <widget class="QStackedWidget" name="stackedWidget">
-     <widget class="QWidget" name="page"/>
-     <widget class="QWidget" name="page_2"/>
-    </widget>
+    <widget class="QStackedWidget" name="stackedWidget"/>
    </item>
   </layout>
  </widget>
